--- a/index.html
+++ b/index.html
@@ -140,10 +140,34 @@
 									<b>Knowledge isn't free. You have to pay attention.</b>
 								</blockquote>
 								<!--Genetics-->
-								<h4 style="text-align:center"><b>Genetics</b></h4>
+								<h4 style="text-align:center"><b>Bioinformatics - Genetics</b></h4>
 								<br/>
 								<section>
 									<div class="row">
+										<div class="col-6">
+											<div class="tooltip">
+											<a href="https://drive.google.com/file/d/1dw52URZlqnxSOEprWJpTGXFNoiWAxa_b/view?usp=sharing" target="_blank" class="image fit">
+												<img src="https://lh3.googleusercontent.com/pw/AP1GczPCX-LNQy4qEILoNNKTThBxQ2TRzBTgac-OJHoCcieManZLtQICHs46HapLP54ZqOvfxLP4CxBXmZX4PjqkKV24-21nSv_yl13rkAfgbwfjt1mA2pLJ=w2400"/>
+												<span class="tooltiptext">ChIP-seq with Bioconductor in R</span>
+											</a>
+											</div>
+										</div>
+										<div class="col-6">
+											<div class="tooltip">
+											<a href="https://drive.google.com/file/d/1ClELELa2NJGB93kgAnKbwFRcB2PuBaFJ/view?usp=sharing" target="_blank" class="image fit">
+												<img src="https://lh3.googleusercontent.com/pw/AP1GczPRDehB5W4uPJ7oMvPKkqJAyJfz89Rc1WOv1WDIieWwazhgjvb5wJqsDLD2X2Xg0gbXIwdo4nq1_CZaRWBjoLiRR0jMtPVMFSimua6swXihbXIc3RaP=w2400"/>
+												<span class="tooltiptext">Biomedical Image Analysis in Python</span>
+											</a>
+											</div>
+										</div>
+										<div class="col-6">
+											<div class="tooltip">
+											<a href="https://drive.google.com/file/d/1cVlU0ATlrjRAH2Ddef0dPH2szcWi5AQv/view?usp=sharing" target="_blank" class="image fit">
+												<img src="https://lh3.googleusercontent.com/pw/AP1GczNg-v16gQzk-3yIJBBaFMO9QE_wUwycmXWAZUxgGQatWWKmdH5kl6LKPRTjwPn-QHjE4gUPerGJqBcpAYfTw775-VdQdohSA5mvTIGQ2QlYe9yzt9XC=w2400"/>
+												<span class="tooltiptext">Introduction to Bioconductor in R</span>
+											</a>
+											</div>
+										</div>
 										<div class="col-6">
 											<div class="tooltip">
                                             <a href="https://drive.google.com/file/d/1eTKE2dEc1434YCoxwO3W2jD82rJHke7m/view?usp=sharing" target="_blank" class="image fit">
@@ -204,6 +228,14 @@
 									<br/>
 									<section>
 										<div class="row">
+											<div class="col-6">
+												<div class="tooltip">
+												<a href="https://drive.google.com/file/d/1LiJINoMTR9hAHpLMqMFLvMWG45hCWd7O/view?usp=sharing" target="_blank" class="image fit">
+													<img src="https://lh3.googleusercontent.com/pw/AP1GczOfcASEgQCAt8RE_2b5WpDVpNs8I7aNpguKIt78xuQYEZAicDA304VUgHbUIrT0H15JUWZCARfN8Pv3kilAAr8t9sBTmGG8MCGALj-RaK4Sv9Uappfq=w2400"/>
+													<span class="tooltiptext">Introduction to Deep Learning with Pytorch</span>
+												</a>
+												</div>
+											</div>
 											<div class="col-6">
 												<div class="tooltip">
 												<a href="https://drive.google.com/file/d/1RH63MSJ3ujbW6PvqfouLTcWAlKR1i1fa/view?usp=sharing" target="_blank" class="image fit">
