--- a/index.html
+++ b/index.html
@@ -435,9 +435,9 @@
 										<div class="row">
 											<div class="col-6">
 												<div class="tooltip">
-												<a href="https://drive.google.com/file/d/1Y-rS4n9ra02kQnSjZquDgLHTyO3qRWdj/view?usp=sharing" target="_blank" class="image fit">
-													<img src="https://lh3.googleusercontent.com/pw/ADCreHcYEzZyzQ45VyWnVjkqOIiLEdhs9MK1i4VkJ0fPof1x35LtPCUlACgS0RNbt5_oPmvIYhosiguIO1CU5ISSuE5kaazq2yT2pnV-nn74LNzEDxW4QUEE=w2400">
-													<span class="tooltiptext">IEEE Open Access Symposium</span>
+												<a href="https://drive.google.com/file/d/1Pvqb1JCAelW92yk4X10MhnkCRQ6UelyQ/view?usp=sharing" target="_blank" class="image fit">
+													<img src="https://lh3.googleusercontent.com/pw/AP1GczPbJEIr8GKtd9uACCGeWUT6F2nqooGXmAxBt3IzvJ9eVOE0i3jrb8iwuX4nQ5Z4i_3dLpuUmXTYaIHUFfuWqEcgByU8uSdCGL14Z16V2pYFh6W5rq26=w2400">
+													<span class="tooltiptext">Hair donation for cancer patients</span>
 												</a>
 												</div>
 											</div>
@@ -445,10 +445,19 @@
 												<div class="tooltip">
 												<a href="https://drive.google.com/file/d/1sj1moehAgI5OwqVnG5D1HMLp6oZiCWBo/view?usp=share_link" target="_blank" class="image fit">
 													<img src="https://lh3.googleusercontent.com/uNmS3eEhuNCy8YSNcq3CMwNtIdbyrIG90wvrufpXa1tF8RCKwE7hW8vIFi9LMw9EKvhV-4JgCpGYS2QP6T_im06IAx_7oZLQ6BElnBjnAQtLehNlkzikJz9CtPJrzzZhSzi36rAlbk0=w2400">
-													<span class="tooltiptext">Contribution in extracurricular activities (Vietnamese)</span>
+													<span class="tooltiptext">High contribution in extracurricular activities (Vietnamese)</span>
 												</a>
 												</div>
 											</div>
+											<div class="col-6">
+												<div class="tooltip">
+												<a href="https://drive.google.com/file/d/1Y-rS4n9ra02kQnSjZquDgLHTyO3qRWdj/view?usp=sharing" target="_blank" class="image fit">
+													<img src="https://lh3.googleusercontent.com/pw/ADCreHcYEzZyzQ45VyWnVjkqOIiLEdhs9MK1i4VkJ0fPof1x35LtPCUlACgS0RNbt5_oPmvIYhosiguIO1CU5ISSuE5kaazq2yT2pnV-nn74LNzEDxW4QUEE=w2400">
+													<span class="tooltiptext">IEEE Open Access Symposium</span>
+												</a>
+												</div>
+											</div>
+											
 											</div>
 									</section>
 								</article>
@@ -461,6 +470,18 @@
 										
 								<!-- The Modal -->
 							<div id="myModal" class="modal">
+								<div class="modal-content" style="text-align: justify;">
+									<h4>Basic Symptom Checker - Streamlit App</h4>
+									<br/>
+									<p><b>Symptom Checker is a basic web-based tool developed using Streamlit that allows users to quickly predict 
+										minor illnesses based on their selected symptoms. By utilizing a Decision Tree Classifier, 
+										this application provides an initial diagnosis, helping users gain insights into potential health concerns.
+										</b></p>
+									<a href="https://symptomschecker.streamlit.app/" target ="_blank" class="button">View the app</a>
+									<a href="https://github.com/kimnguyen2002/Symptoms_Checker/blob/main/symptoms_checker.py" target ="_blank" class="button">View the source code</a>
+									<a href="https://github.com/kimnguyen2002/Symptoms_Checker/blob/main/symptoms_dataset.csv" target ="_blank" class="button">View the dataset</a>
+								</div>
+								<br/>
 								<div class="modal-content" style="text-align: justify;">
 									<h4>Retrieving Biological Data</h4>
 									<br/>
@@ -476,7 +497,7 @@
 								<div class="modal-content" style="text-align: justify;">
 									<h4>White Wine Classification - Streamlit App</h4>
 									<br/>
-									<p><b>The Streamlit App is used to automatically predict different types of white
+									<p><b>This Streamlit App is used to automatically predict different types of white
 										wine based on three Machine Learning models: Random Forest, Support Vector Machine and Logistic Regression.
 										</b></p>
 									<a href="https://wineclassification.streamlit.app/" target ="_blank" class="button">View the app</a>
