--- a/index.html
+++ b/index.html
@@ -471,11 +471,11 @@
 								<!-- The Modal -->
 							<div id="myModal" class="modal">
 								<div class="modal-content" style="text-align: justify;">
-									<h4>Basic Symptom Checker - Streamlit App</h4>
+									<h4>Symptom Checker with Drug Info - Streamlit App</h4>
 									<br/>
 									<p><b>Symptom Checker is a basic web-based tool developed using Streamlit that allows users to quickly predict 
 										minor illnesses based on their selected symptoms. By utilizing a Decision Tree Classifier, 
-										this application provides an initial diagnosis, helping users gain insights into potential health concerns.
+										this application provides an initial diagnosis, display related drug options for the predicted condition, sourced from a drug side effects dataset.
 										</b></p>
 									<a href="https://symptomschecker.streamlit.app/" target ="_blank" class="button">View the app</a>
 									<a href="https://github.com/kimnguyen2002/Symptoms_Checker/blob/main/symptoms_checker.py" target ="_blank" class="button">View the source code</a>
