--- a/index.html
+++ b/index.html
@@ -478,8 +478,7 @@
 										this application provides an initial diagnosis, display related drug options for the predicted condition, sourced from a drug side effects dataset.
 										</b></p>
 									<a href="https://symptomschecker.streamlit.app/" target ="_blank" class="button">View the app</a>
-									<a href="https://github.com/kimnguyen2002/Symptoms_Checker/blob/main/symptoms_checker.py" target ="_blank" class="button">View the source code</a>
-									<a href="https://github.com/kimnguyen2002/Symptoms_Checker/blob/main/symptoms_dataset.csv" target ="_blank" class="button">View the dataset</a>
+									<a href="https://github.com/kimnguyen2002/Symptoms_Checker" target ="_blank" class="button">Source code repository</a>
 								</div>
 								<br/>
 								<div class="modal-content" style="text-align: justify;">
@@ -501,8 +500,7 @@
 										wine based on three Machine Learning models: Random Forest, Support Vector Machine and Logistic Regression.
 										</b></p>
 									<a href="https://wineclassification.streamlit.app/" target ="_blank" class="button">View the app</a>
-									<a href="https://github.com/kimnguyen2002/Wine_Classification/blob/main/whitewine.py" target ="_blank" class="button">View the source code</a>
-									<a href="https://github.com/kimnguyen2002/Wine_Classification/blob/main/winequality-white.csv" target ="_blank" class="button">View the dataset</a>
+									<a href="https://github.com/kimnguyen2002/Wine_Classification" target ="_blank" class="button">Source code repository</a>
 								</div>
 								<br/>
 								<div class="modal-content" style="text-align: justify;">
