--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 									<br/>
 									<p><b>Symptom Checker is a basic web-based tool developed using Streamlit that allows users to quickly predict 
 										minor illnesses based on their selected symptoms. By utilizing a Decision Tree Classifier, 
-										this application provides an initial diagnosis, display related drug options for the predicted condition, sourced from a drug side effects dataset.
+										this application provides an initial diagnosis, displays related drug options for the predicted condition, sourced from a drug side effects dataset.
 										</b></p>
 									<a href="https://symptomschecker.streamlit.app/" target ="_blank" class="button">View the app</a>
 									<a href="https://github.com/kimnguyen2002/Symptoms_Checker" target ="_blank" class="button">Source code repository</a>
