--- a/index.html
+++ b/index.html
@@ -146,6 +146,14 @@
 									<div class="row">
 										<div class="col-6">
 											<div class="tooltip">
+											<a href="https://drive.google.com/file/d/1uoRxeaxrXP9UDDKR-uV-2DOeu6eFuhSn/view?usp=sharing" target="_blank" class="image fit">
+												<img src="https://lh3.googleusercontent.com/pw/AP1GczPKj3fZqSQ2iozc8gKPyLadtZNcELd84C0Wopf6KQvmr7Jtjkx-sPh30mdijut9D_wXiCuuhg4IA6vlfpBb2mx-P9ZyuyYIzbP87NJN9IcZ_RJ-qQ94=w2400"/>
+												<span class="tooltiptext">AI in Medical Diagnosis</span>
+											</a>
+											</div>
+										</div>
+										<div class="col-6">
+											<div class="tooltip">
 											<a href="https://drive.google.com/file/d/1dw52URZlqnxSOEprWJpTGXFNoiWAxa_b/view?usp=sharing" target="_blank" class="image fit">
 												<img src="https://lh3.googleusercontent.com/pw/AP1GczPCX-LNQy4qEILoNNKTThBxQ2TRzBTgac-OJHoCcieManZLtQICHs46HapLP54ZqOvfxLP4CxBXmZX4PjqkKV24-21nSv_yl13rkAfgbwfjt1mA2pLJ=w2400"/>
 												<span class="tooltiptext">ChIP-seq with Bioconductor in R</span>
@@ -170,17 +178,17 @@
 										</div>
 										<div class="col-6">
 											<div class="tooltip">
-                                            <a href="https://drive.google.com/file/d/1eTKE2dEc1434YCoxwO3W2jD82rJHke7m/view?usp=sharing" target="_blank" class="image fit">
-                                                <img src="https://lh3.googleusercontent.com/pw/AP1GczOdULofM3fOg5zyclBBYPWyLLGuEMOaEwgJ1gqtE5wbub_RzIGJanD4af3e7W5PkGP9tN0_KlEjFgs1rXE3ifQOYmbx2O79XbeDejas-61Hjw8QtyoN=w2400"/>
-                                                <span class="tooltiptext">Introduction to RT-qPCR and Gene Expression</span>
+						                                            <a href="https://drive.google.com/file/d/1eTKE2dEc1434YCoxwO3W2jD82rJHke7m/view?usp=sharing" target="_blank" class="image fit">
+						                                                <img src="https://lh3.googleusercontent.com/pw/AP1GczOdULofM3fOg5zyclBBYPWyLLGuEMOaEwgJ1gqtE5wbub_RzIGJanD4af3e7W5PkGP9tN0_KlEjFgs1rXE3ifQOYmbx2O79XbeDejas-61Hjw8QtyoN=w2400"/>
+						                                                <span class="tooltiptext">Introduction to RT-qPCR and Gene Expression</span>
 											</a>
 											</div>
 										</div>
 										<div class="col-6">
 											<div class="tooltip">
-                                            <a href="https://drive.google.com/file/d/1k9ecKrqMMeRCKnYZ2v-4M62NmNXW_ULC/view?usp=sharing" target="_blank" class="image fit">
-                                                <img src="https://lh3.googleusercontent.com/pw/AP1GczMJVGYDeqZhPkYxaqwAzSaSydHtWCNYbhslxdHoXX603GcnEmNfE40qCYHarEO4djqHrUsgCmswMLdEJI08ft4j-p9YN8ghHfgy60MKxtk3tlSG1VD5=w2400"/>
-                                                <span class="tooltiptext">Advanced Genomics Techniques for PCR Controls</span>
+						                                            <a href="https://drive.google.com/file/d/1k9ecKrqMMeRCKnYZ2v-4M62NmNXW_ULC/view?usp=sharing" target="_blank" class="image fit">
+						                                                <img src="https://lh3.googleusercontent.com/pw/AP1GczMJVGYDeqZhPkYxaqwAzSaSydHtWCNYbhslxdHoXX603GcnEmNfE40qCYHarEO4djqHrUsgCmswMLdEJI08ft4j-p9YN8ghHfgy60MKxtk3tlSG1VD5=w2400"/>
+						                                                <span class="tooltiptext">Advanced Genomics Techniques for PCR Controls</span>
 											</a>
 											</div>
 										</div>
