--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 											<div class="tooltip">
 											<a href="https://drive.google.com/file/d/1uoRxeaxrXP9UDDKR-uV-2DOeu6eFuhSn/view?usp=sharing" target="_blank" class="image fit">
 												<img src="https://lh3.googleusercontent.com/pw/AP1GczPKj3fZqSQ2iozc8gKPyLadtZNcELd84C0Wopf6KQvmr7Jtjkx-sPh30mdijut9D_wXiCuuhg4IA6vlfpBb2mx-P9ZyuyYIzbP87NJN9IcZ_RJ-qQ94=w2400"/>
-												<span class="tooltiptext">AI in Medical Diagnosis</span>
+												<span class="tooltiptext">AI for Medical Diagnosis</span>
 											</a>
 											</div>
 										</div>
