--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 										As a self-taught Data Science and Machine Learning, 
 										I have developed a keen interest in creating solutions that deliver 
 										tangible value and make a meaningful impact at every stage. 
-										My primary focus is now on Bioinformatics, specifically in genetics, 
+										I also have interest in Bioinformatics, specifically in genetics, 
 										which is essential for real-world application and medical system.
 									</b></h7>
 									</div>
