--- a/index.html
+++ b/index.html
@@ -421,9 +421,9 @@
 									<div class="row">
 										<div class="col-6">
 											<div class="tooltip">
-                                            <a href="https://drive.google.com/file/d/1Ix_4E_dzrMkiOVxaowLuKZ11Ce0HeU89/view?usp=sharing" target="_blank" class="image fit">
-                                                <img src="https://lh3.googleusercontent.com/pw/AP1GczMjrRSdCBd1smQPHJgCfAWUiD3Mfj-9LQwZjD5pl77pv1NyQyfgNO1WicsCACRqjR_nFsa0MG4b0x-GLFt71ii1tZuriHHhZ9v_oGghhDNbaOt4iRdn=w2400"/>
-                                                <span class="tooltiptext">Foundations of Cybersecurity</span>
+						                                        <a href="https://drive.google.com/file/d/1Ix_4E_dzrMkiOVxaowLuKZ11Ce0HeU89/view?usp=sharing" target="_blank" class="image fit">
+						                                                <img src="https://lh3.googleusercontent.com/pw/AP1GczMjrRSdCBd1smQPHJgCfAWUiD3Mfj-9LQwZjD5pl77pv1NyQyfgNO1WicsCACRqjR_nFsa0MG4b0x-GLFt71ii1tZuriHHhZ9v_oGghhDNbaOt4iRdn=w2400"/>
+						                                                <span class="tooltiptext">Foundations of Cybersecurity</span>
 											</a>
 											</div>
 										</div>
@@ -478,6 +478,18 @@
 										
 								<!-- The Modal -->
 							<div id="myModal" class="modal">
+								<div class="modal-content" style="text-align: justify;">
+									<h4>Heart Risk Prediction - Streamlit App</h4>
+									<br/>
+									<p><b>The Heart Risk Prediction is a web application designed to assess the risk of heart disease based on user-input health metrics. 
+										Utilizing machine learning models, the app provides a user-friendly interface through Streamlit, allowing individuals to enter information such as age, gender, blood pressure, cholesterol levels, and other relevant health indicators. 
+										By processing this data with a trained model, the app offers insights into the user's heart health, categorizing their risk as low or high. 
+										This project aims to raise awareness about heart disease and promote early detection and preventive measures.
+										</b></p>
+									<a href="https://heartriskprediction.streamlit.app/" target ="_blank" class="button">View the app</a>
+									<a href="https://github.com/kimnguyen2002/Heart_Risk_Prediction" target ="_blank" class="button">Source code repository</a>
+								</div>
+								<br/>
 								<div class="modal-content" style="text-align: justify;">
 									<h4>Symptom Checker with Drug Info - Streamlit App</h4>
 									<br/>
