--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 										As a self-taught Data Science and Machine Learning, 
 										I have developed a keen interest in creating solutions that deliver 
 										tangible value and make a meaningful impact at every stage. 
-										I also have interest in Bioinformatics, specifically in genetics, 
+										My primary focus now is on Biomedical Informatics, 
 										which is essential for real-world application and medical system.
 									</b></h7>
 									</div>
@@ -140,7 +140,7 @@
 									<b>Knowledge isn't free. You have to pay attention.</b>
 								</blockquote>
 								<!--Genetics-->
-								<h4 style="text-align:center"><b>Bioinformatics - Genetics</b></h4>
+								<h4 style="text-align:center"><b>Biomedical - Genetics</b></h4>
 								<br/>
 								<section>
 									<div class="row">
@@ -178,59 +178,22 @@
 										</div>
 										<div class="col-6">
 											<div class="tooltip">
-						                                            <a href="https://drive.google.com/file/d/1eTKE2dEc1434YCoxwO3W2jD82rJHke7m/view?usp=sharing" target="_blank" class="image fit">
-						                                                <img src="https://lh3.googleusercontent.com/pw/AP1GczOdULofM3fOg5zyclBBYPWyLLGuEMOaEwgJ1gqtE5wbub_RzIGJanD4af3e7W5PkGP9tN0_KlEjFgs1rXE3ifQOYmbx2O79XbeDejas-61Hjw8QtyoN=w2400"/>
-						                                                <span class="tooltiptext">Introduction to RT-qPCR and Gene Expression</span>
+						                     <a href="https://drive.google.com/file/d/1eTKE2dEc1434YCoxwO3W2jD82rJHke7m/view?usp=sharing" target="_blank" class="image fit">
+						                        <img src="https://lh3.googleusercontent.com/pw/AP1GczOdULofM3fOg5zyclBBYPWyLLGuEMOaEwgJ1gqtE5wbub_RzIGJanD4af3e7W5PkGP9tN0_KlEjFgs1rXE3ifQOYmbx2O79XbeDejas-61Hjw8QtyoN=w2400"/>
+						                        <span class="tooltiptext">Introduction to RT-qPCR and Gene Expression</span>
 											</a>
 											</div>
 										</div>
 										<div class="col-6">
 											<div class="tooltip">
-						                                            <a href="https://drive.google.com/file/d/1k9ecKrqMMeRCKnYZ2v-4M62NmNXW_ULC/view?usp=sharing" target="_blank" class="image fit">
-						                                                <img src="https://lh3.googleusercontent.com/pw/AP1GczMJVGYDeqZhPkYxaqwAzSaSydHtWCNYbhslxdHoXX603GcnEmNfE40qCYHarEO4djqHrUsgCmswMLdEJI08ft4j-p9YN8ghHfgy60MKxtk3tlSG1VD5=w2400"/>
-						                                                <span class="tooltiptext">Advanced Genomics Techniques for PCR Controls</span>
+						                    <a href="https://drive.google.com/file/d/1k9ecKrqMMeRCKnYZ2v-4M62NmNXW_ULC/view?usp=sharing" target="_blank" class="image fit">
+						                        <img src="https://lh3.googleusercontent.com/pw/AP1GczMJVGYDeqZhPkYxaqwAzSaSydHtWCNYbhslxdHoXX603GcnEmNfE40qCYHarEO4djqHrUsgCmswMLdEJI08ft4j-p9YN8ghHfgy60MKxtk3tlSG1VD5=w2400"/>
+						                        <span class="tooltiptext">Advanced Genomics Techniques for PCR Controls</span>
 											</a>
 											</div>
 										</div>
 									</section>
-									<!--Cloud-->
-									<h4 style="text-align:center"><b>Cloud</b></h4>
-									<br/>
-									<section>
-										<div class="row">
-											<div class="col-6">
-												<div class="tooltip">
-												<a href="https://drive.google.com/file/d/1rSnTscZOJlIUKvSM-6wzkzYXkhu0U9Tz/view?usp=sharing" target="_blank" class="image fit">
-													<img src="https://lh3.googleusercontent.com/pw/ABLVV85VpT4qALU9VNKzfWmgtRWR4Tyg1AEUknniA1oqkjTEV87IBMhXbPJ4qnJ3JQ3OeTncD9T0vQQY-by53xDcsqm_3aNTqawAbR5r1ZbZuaLey-1MJ2S1=w2400"/>
-													<span class="tooltiptext">AWS Cloud Practitioner Essentials</span>
-												</a>
-												</div>
-											</div>
-											<div class="col-6">
-												<div class="tooltip">
-												<a href="https://drive.google.com/file/d/1Ec4DxH5pg99B9IaocCqsEZLjD-ICmZIq/view?usp=sharing" target="_blank" class="image fit">
-													<img src="https://lh3.googleusercontent.com/pw/ADCreHdu_KXu7gsN0UYY4QTfoUGg29jM70Gjk6MoVDk3aSDtfaqy3HGREZBpVYpEY9OhjtpokF9cSHlVDUT0TTL2-Nvid85BaW6ZjcwGRtjiZrtpFdI3fMTr=w2400">
-													<span class="tooltiptext">Demystify Generative AI</span>
-												</a>
-												</div>
-											</div>
-											<div class="col-6">
-												<div class="tooltip">
-												<a href="https://drive.google.com/file/d/1K-yL3y4kct2T6pSh6Z6s7x8b6qIYKS2O/view?usp=sharing" target="_blank" class="image fit">
-													<img src="https://lh3.googleusercontent.com/pw/ADCreHcwnOFp7rUuEMjU2ygxMv2kUXZJ1aKrcHaCoKd4jMmEmAvbtYx-yVOBMp8arILDfXAQTdcq6GA3lWhVZpu0DF1ncI8ZJ-G8P89WAJoShWO7AVBbZ_sq=w2400">
-													<span class="tooltiptext">Azure Data Fundamentals</span>
-												</a>
-												</div>
-											</div>
-											<div class="col-6">
-												<div class="tooltip">
-												<a href="https://drive.google.com/file/d/16JoutOKSk9aNe3QmmB9Nt2EGLV-7s6_u/view?usp=sharing" target="_blank" class="image fit">
-													<img src="https://lh3.googleusercontent.com/pw/AJFCJaXsXzjqJhQQasuS5o7kdwBMBXKN3KrJBFMlq6ruwmt0iMieB2zTH1ceM3J0ZYSaK1P3oLxDrIMjhPg-VI1UdbC51zn40wN5OOJ_wqoK8UBnRg1XmfCc=w2400">
-													<span class="tooltiptext">Google Cloud Fundamentals</span>
-												</a>
-												</div>
-											</div>
-										</section>
+									
 										<!--AI & ML-->
 									<h4 style="text-align:center"><b>AI - Machine Learning - Data Analytics</b></h4>
 									<br/>
@@ -414,6 +377,46 @@
 											</div>
 										</div>
 									</section>
+
+								<!--Cloud-->
+								<h4 style="text-align:center"><b>Cloud</b></h4>
+								<br/>
+								<section>
+									<div class="row">
+										<div class="col-6">
+											<div class="tooltip">
+											<a href="https://drive.google.com/file/d/1rSnTscZOJlIUKvSM-6wzkzYXkhu0U9Tz/view?usp=sharing" target="_blank" class="image fit">
+												<img src="https://lh3.googleusercontent.com/pw/ABLVV85VpT4qALU9VNKzfWmgtRWR4Tyg1AEUknniA1oqkjTEV87IBMhXbPJ4qnJ3JQ3OeTncD9T0vQQY-by53xDcsqm_3aNTqawAbR5r1ZbZuaLey-1MJ2S1=w2400"/>
+												<span class="tooltiptext">AWS Cloud Practitioner Essentials</span>
+											</a>
+											</div>
+										</div>
+										<div class="col-6">
+											<div class="tooltip">
+											<a href="https://drive.google.com/file/d/1Ec4DxH5pg99B9IaocCqsEZLjD-ICmZIq/view?usp=sharing" target="_blank" class="image fit">
+												<img src="https://lh3.googleusercontent.com/pw/ADCreHdu_KXu7gsN0UYY4QTfoUGg29jM70Gjk6MoVDk3aSDtfaqy3HGREZBpVYpEY9OhjtpokF9cSHlVDUT0TTL2-Nvid85BaW6ZjcwGRtjiZrtpFdI3fMTr=w2400">
+												<span class="tooltiptext">Demystify Generative AI</span>
+											</a>
+											</div>
+										</div>
+										<div class="col-6">
+											<div class="tooltip">
+											<a href="https://drive.google.com/file/d/1K-yL3y4kct2T6pSh6Z6s7x8b6qIYKS2O/view?usp=sharing" target="_blank" class="image fit">
+												<img src="https://lh3.googleusercontent.com/pw/ADCreHcwnOFp7rUuEMjU2ygxMv2kUXZJ1aKrcHaCoKd4jMmEmAvbtYx-yVOBMp8arILDfXAQTdcq6GA3lWhVZpu0DF1ncI8ZJ-G8P89WAJoShWO7AVBbZ_sq=w2400">
+												<span class="tooltiptext">Azure Data Fundamentals</span>
+											</a>
+											</div>
+										</div>
+										<div class="col-6">
+											<div class="tooltip">
+											<a href="https://drive.google.com/file/d/16JoutOKSk9aNe3QmmB9Nt2EGLV-7s6_u/view?usp=sharing" target="_blank" class="image fit">
+												<img src="https://lh3.googleusercontent.com/pw/AJFCJaXsXzjqJhQQasuS5o7kdwBMBXKN3KrJBFMlq6ruwmt0iMieB2zTH1ceM3J0ZYSaK1P3oLxDrIMjhPg-VI1UdbC51zn40wN5OOJ_wqoK8UBnRg1XmfCc=w2400">
+												<span class="tooltiptext">Google Cloud Fundamentals</span>
+											</a>
+											</div>
+										</div>
+									</section>
+
 									<!--Cybersecurity-->
 								<h4 style="text-align:center"><b>Cybersecurity</b></h4>
 								<br/>
@@ -479,13 +482,50 @@
 								<!-- The Modal -->
 							<div id="myModal" class="modal">
 								<div class="modal-content" style="text-align: justify;">
+									<h4>Chest X-Ray Image Analysis - Streamlit App</h4>
+									<br/>
+									<div class="row">
+									<div class="col-6">
+										<div class="tooltip">
+										<a href="https://chestxrayanalysis.streamlit.app/" target="_blank" class="image fit">
+											<img src="https://lh3.googleusercontent.com/pw/AP1GczMnFxVlt5xk6Y6TZDPwgmu6u3iHnCo4idmkvsfUC2KZ9qFt7ezq-8GvalO7esUBbmNShqQwIygRHDmA5BfZiZQnxMVvCX8XdIR_XgjCk_CloWPsIygo=w2400"/>
+										</a>
+										</div>
+									</div>
+									<div class="col-6">
+										<div class="tooltip">
+										<a href="https://chestxrayanalysis.streamlit.app/" target="_blank" class="image fit">
+											<img src="https://lh3.googleusercontent.com/pw/AP1GczMV9bbE7wXN5UKj2Ve_NhVG_LrcApL8e9JuX5tznZgtVOFubmUP1vcZqhr2xrQO3iguagnPZ7WHTiuzgkVqBABekPqRPxBKC5PHUkSNl0Mso_94ywE4=w2400"/>
+										</a>
+										</div>
+									</div>
+									</div>
+									<br/>
+									<p><b>The Chest X-Ray Image Analysis app is designed to assist users in detecting potential abnormalities in chest X-ray images using deep learning techniques. 
+										  This user-friendly web application leverages the DenseNet121 model to analyze uploaded X-ray images and provide insights into various medical conditions.
+										</b></p>
+										<p><b><u>Note</u>: It might take a few seconds to wake this app up</b></p>
+									<a href="https://chestxrayanalysis.streamlit.app/" target ="_blank" class="button">View the app</a>
+									<a href="https://github.com/kimnguyen2002/Chest-X-Ray-Image-Analysis" target ="_blank" class="button">Source code repository</a>
+								</div>
+								<br/>
+								<div class="modal-content" style="text-align: justify;">
 									<h4>Heart Risk Prediction - Streamlit App</h4>
 									<br/>
+									<div class="col-6">
+										<div class="tooltip">
+										<a href="https://heartriskprediction.streamlit.app/" target="_blank" class="image fit">
+											<img src="https://lh3.googleusercontent.com/pw/AP1GczPpyFWJhVNAwJ_N3PvJBhpWtRQ3HkPNTjH6bImFfGj6v1W-ipYZ26hqVT2f8s-reyGwdmvZHC5Jra0SYd6hcz6t-kuEKQUTmljzvnUFmx4vGOw6JiOG=w2400"/>
+										</a>
+										</div>
+									</div>
+									<br/>
 									<p><b>The Heart Risk Prediction is a web application designed to assess the risk of heart disease based on user-input health metrics. 
-										Utilizing machine learning models, the app provides a user-friendly interface through Streamlit, allowing individuals to enter information such as age, gender, blood pressure, cholesterol levels, and other relevant health indicators. 
-										By processing this data with a trained model, the app offers insights into the user's heart health, categorizing their risk as low or high. 
+										Utilizing machine learning models, the app provides a user-friendly interface through Streamlit, offers insights into the user's heart health, 
+										categorizing their risk as low or high. 
 										This project aims to raise awareness about heart disease and promote early detection and preventive measures.
 										</b></p>
+										<p><b><u>Note</u>: It might take a few seconds to wake this app up</b></p>
 									<a href="https://heartriskprediction.streamlit.app/" target ="_blank" class="button">View the app</a>
 									<a href="https://github.com/kimnguyen2002/Heart_Risk_Prediction" target ="_blank" class="button">Source code repository</a>
 								</div>
@@ -493,10 +533,19 @@
 								<div class="modal-content" style="text-align: justify;">
 									<h4>Symptom Checker with Drug Info - Streamlit App</h4>
 									<br/>
+									<div class="col-6">
+										<div class="tooltip">
+										<a href="https://symptomschecker.streamlit.app/" target="_blank" class="image fit">
+											<img src="https://lh3.googleusercontent.com/pw/AP1GczM16e_4IArohsV0KL6vUvDFab-rbaF6mCduFryDIm9ujVMW2elgKkOVEcWxHZsa5CBROokY-Jr5gRFdLHsMpJmmO9LdGo2CCPrAPivCtRw46oybP0Kl=w2400"/>
+										</a>
+										</div>
+									</div>
+									<br/>
 									<p><b>Symptom Checker is a basic web-based tool developed using Streamlit that allows users to quickly predict 
 										minor illnesses based on their selected symptoms. By utilizing a Decision Tree Classifier, 
 										this application provides an initial diagnosis, displays related drug options for the predicted condition, sourced from a drug side effects dataset.
 										</b></p>
+										<p><b><u>Note</u>: It might take a few seconds to wake this app up</b></p>
 									<a href="https://symptomschecker.streamlit.app/" target ="_blank" class="button">View the app</a>
 									<a href="https://github.com/kimnguyen2002/Symptoms_Checker" target ="_blank" class="button">Source code repository</a>
 								</div>
