--- a/index.html
+++ b/index.html
@@ -482,6 +482,33 @@
 								<!-- The Modal -->
 							<div id="myModal" class="modal">
 								<div class="modal-content" style="text-align: justify;">
+									<h4>Anemia Diagnostic Assistant - Streamlit App</h4>
+									<br/>
+									<div class="col-6">
+										<div class="tooltip">
+										<a href="https://anemia-diagnosis.streamlit.app/" target="_blank" class="image fit">
+											<img src="https://lh3.googleusercontent.com/pw/AP1GczOjksvb-G0a_kOf13Bf8v6EtrYlX7CmoJ8tgAfsrIHHlq0DEDRJpEeC2BG6xuEmV6IlWPDTkuECTZ-1jgL02tGQn8NRyaqGn7zJ0_LC-kZZb4FMAfQ_=w2400"/>
+										</a>
+										</div>
+									</div>
+									<div class="col-6">
+										<div class="tooltip">
+										<a href="https://anemia-diagnosis.streamlit.app/" target="_blank" class="image fit">
+											<img src="https://lh3.googleusercontent.com/pw/AP1GczMjq5uRnr9fQ9gHdVmmN3I-4YyhUDT_d9mGJmjBL2LPBWLaTx5pLa5vg-jNytR74geTROOMHfGF0_tF5CtrJdxy2nl0TsQJG1QsKxOc00XH8oYNFgl0=w2400"/>
+										</a>
+										</div>
+									</div>
+									<br/>
+									<p><b>This project presents a web application designed to predict the risk of anemia using advanced machine learning techniques. By inputting their hematological parameters, users can receive an accurate anemia diagnosis based on a predictive model that has been rigorously trained.
+										Inspired by the pioneering research of <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC11699093/">Mojumdar et al. (2025)</a>, this project is a seamless integration of clinical expertise and cutting-edge data science. It marks a significant leap forward in transforming the way we diagnose and intervene in anemia, enabling early detection and better patient care.
+										The success of this project is the result of an exceptional collaboration: <a href="https://scholar.google.com.tw/citations?user=MwIr5fMAAAAJ&hl=en"> Dr. Gem Wu</a> from Chang Gung Memorial Hospital provided invaluable medical insights, while my dedicated <a href="https://github.com/NgocDuy3112"> data science partner</a> played a crucial role in developing and refining the model.
+										</b></p>
+										<p><b><u>Note</u>: It might take a few seconds to wake this app up</b></p>
+									<a href="https://anemia-diagnosis.streamlit.app/" target ="_blank" class="button">View the app</a>
+									<a href="https://github.com/kimnguyen2002/Anemia-Prediction" target ="_blank" class="button">Source code repository</a>
+								</div>
+								<br/>
+								<div class="modal-content" style="text-align: justify;">
 									<h4>Chest X-Ray Image Analysis - Streamlit App</h4>
 									<br/>
 									<div class="row">
