--- a/index.html
+++ b/index.html
@@ -870,8 +870,11 @@
 					<div class="about-content">
 						<div class="about-text animate">
 							<h2>About Me</h2>
-							<p>As a self-taught in Data Science and Machine Learning with educational background in International Business, I have developed a keen interest in creating solutions that deliver tangible value and make a meaningful impact at every stage.</p>
-							<p>My primary focus now is on Biomedical Informatics, which is essential for real-world application and medical systems. I'm passionate about leveraging technology to improve healthcare outcomes and create innovative solutions to complex problems.</p>
+							<p>Coming from a non-traditional background in International Business, I began my journey into Data Science and Machine Learning as a self-taught learner, driven by curiosity and a desire to solve real-world problems. 
+							   Over time, my interest evolved into a clear mission: to apply technology in a way that creates tangible impact in healthcare.</p>
+						    <p>My journey into tech started outside of the traditional path, but led me straight into the intersection of healthcare and data. 
+							   Now as a Master’s student in <u>Smart Medicine and Health Informatics</u> at <b>National Taiwan University</b>, I’m focused on Biomedical Informatics - designing technologies that are not only intelligent, but also meaningful in real-world clinical settings.</p>
+							<p>I'm passionate about building solutions where clinical insight meets technical precision, and where ethical, explainable AI plays a critical role. I believe the future of healthcare isn’t just smart - it’s also transparent, human-centered, and inclusive.</p>
 							<a href="#work" class="button">View My Projects</a>
 						</div>
 						<div class="about-image animate delay-1">
@@ -2262,5 +2265,6 @@
 		<script async src="//www.instagram.com/embed.js"></script>
 	</body>
 </html>
+
 
 
